--- a/train/config/lelan_col.yaml
+++ b/train/config/lelan_col.yaml
@@ -22,12 +22,11 @@ plateau_factor: 0.5
 seed: 0
 
 # model params
-model_type: lelan #lnp_freeze_clip
-vision_encoder: lelan_clip_film #lnp_clip_film
+model_type: lelan_col #lelan --> no history of image, #lelan_col --> with history of image  
+vision_encoder: lelan_clip_film
 encoding_size: 256
 obs_encoder: efficientnet-b0
 clip_type: "ViT-B/32"
-#attn_unet: False
 cond_predict_scale: False
 mha_num_attention_heads: 4
 mha_num_attention_layers: 4
@@ -35,26 +34,17 @@ mha_ff_dim_factor: 4
 down_dims: [64, 128, 256]
 
 # diffusion model params
-#num_diffusion_iters: 10
-
-# mask 
-#goal_mask_prob: 0.5
+num_diffusion_iters: 10
 
 # normalization for the action space
 normalize: True
 
+weight_col_loss: 10.0
+
 # context
 context_type: temporal
-context_size: 0 # 5
+context_size: 1 # 5
 alpha: 1e-4
-
-# distance bounds for distance and action and distance predictions 
-#distance:
-#  min_dist_cat: 0
-#  max_dist_cat: 20
-#action:
-#  min_dist_cat: 3
-#  max_dist_cat: 20
 
 # action output params
 len_traj_pred: 24
@@ -66,24 +56,51 @@ feature_size: 4096
 
 datasets:  
   go_stanford4:
-    #data_folder: /home/noriaki/visualnav-transformer_combine/gnm_dataset/go_stanford/ # datasets/stanford_go_new
     train: ../dataset/lelan_gs4/train/
     test: ../dataset/lelan_gs4/test/
     image: ../dataset/dataset_LeLaN_gs4/image/
     pickle: ../dataset/dataset_LeLaN_gs4/pickle/
-    #odom: /media/noriaki/Noriaki_Data/data_GS/dataset_odom.txt
-    #end_slack: 0
-    #goals_per_obs: 2 # increase dataset size
-    #negative_mining: True
     backside: False
     aug_seq: False
     only_front: False
-    #imsize: 580
-    #height: 580
-    #width: 1160
+            
+  sacson:
+    train: ../dataset/lelan_sacson/train/
+    test: ../dataset/lelan_sacson/test/
+    image: ../dataset/dataset_LeLaN_sacson/
+    pickle: ../dataset/dataset_LeLaN_sacson/
+    backside: False
+    aug_seq: False
+    only_front: False
+            
+  go_stanford2:
+    train: ../dataset/lelan_gs2/train/
+    test: ../dataset/lelan_gs2/test/
+    image: ../dataset/dataset_LeLaN_gs2/
+    pickle: ../dataset/dataset_LeLaN_gs2/
+    backside: False
+    aug_seq: False
+    only_front: False
+
+  humanw:
+    train: ../dataset/lelan_humanw/train/
+    test: ../dataset/lelan_humanw/test/
+    image: ../dataset/dataset_LeLaN_humanwalk/
+    pickle: ../dataset/dataset_LeLaN_humanwalk/    
+    backside: False
+    aug_seq: False 
+    only_front: True   
+
+  youtube:
+    train: ../dataset/lelan_youtube/train/
+    test: ../dataset/lelan_youtube/test/
+    image: ../dataset/dataset_LeLaN_youtube/
+    pickle: ../dataset/dataset_LeLaN_youtube/        
+    backside: False
+    aug_seq: False 
+    only_front: True  
         
 # logging stuff
-## =0 turns off
 print_log_freq: 1000 # in iterations
 image_log_freq: 40 #0 # in iterations 1000 40
 num_images_log: 8 #0 
@@ -93,4 +110,5 @@ wandb_log_freq: 10 # in iterations
 eval_freq: 1 # in epochs 20
 save_freq: 3 # in epochs
 
-load_run: lelan-release/lelan_2024_09_10_14_05_18
+load_run: lelan-release/xxxxxxxx #xxxxxxxx is the folder of the pretrained checkpoint
+load_nomad: nomad/nomad_crop
