--- a/train/config/lelan.yaml
+++ b/train/config/lelan.yaml
@@ -105,4 +105,5 @@ wandb_log_freq: 10 # in iterations
 eval_freq: 1 # in epochs 20
 save_freq: 1 # in epochs
 
-load_run: lelan-release/lelan_2024_09_16_18_12_27 #xxxxxxxx is the folder of the pretrained checkpoint
+load_run: lelan-release/lelan_2024_09_17_09_22_55 #xxxxxxxx is the folder of the pretrained checkpoint
+#load_run: lelan-release/lelan_2024_09_16_18_12_27 #xxxxxxxx is the folder of the pretrained checkpoint
